--- a/.babelrc
+++ b/.babelrc
@@ -1,14 +1,17 @@
 {
-	"presets": [
-		"react",
-		["env", {
-			"targets": {
-				"browsers": "last 2 versions"
-			},
-			"loose": true,
-			"modules": false
-		}]
-	],
+  "presets": [
+    "react",
+    [
+      "env",
+      {
+        "targets": {
+          "browsers": "last 2 versions"
+        },
+        "loose": true,
+        "modules": false
+      }
+    ]
+  ],
   "plugins": [
     "react-hot-loader/babel",
     "babel-plugin-syntax-dynamic-import",
@@ -17,14 +20,10 @@
   ],
   "env": {
     "test": {
-      "plugins": [
-        "transform-es2015-modules-commonjs"
-      ]
+      "plugins": ["transform-es2015-modules-commonjs"]
     },
     "server": {
-      "plugins": [
-        "transform-es2015-modules-commonjs"
-      ]
+      "plugins": ["transform-es2015-modules-commonjs"]
     }
   }
 }
