--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "15.5.4",
     "react-redux": "5.0.5",
     "react-router-dom": "4.1.1",
+    "react-hot-loader": "3.0.0-beta.6",
     "redux": "3.6.0",
     "redux-thunk": "2.2.0",
     "styled-components": "2.0.0",
